# bagent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  PLAN_V2.md  config.py  ecosystem.config.cjs  job_store.py  observability.py  pyproject.toml  server.py  test_local.py
.claude/: settings.local.json
agent/: runner.py  tools.py
data/: treatment_methods_seed.csv  treatment_methods_seed_v2.csv
deploy/: docker-compose.redis.yml  ecosystem.bagent-report-worker.config.js  ecosystem.bagent-worker.config.js  ecosystem.scrape-workers.config.js
discovery/: __init__.py  discover.py  locations.py
docs/: FINDINGS-2026-06-11.md  FUNNEL_AUDIT-2026-06-11.md  SYSTEM_MAP-2026-06-11.md  free_report.md
embeddings-local/: README.md  pyproject.toml  server.py
embeddings-local/tests/: test_server.py
ingestion/: __init__.py  live_scrape.py
models/: __init__.py  analysis.py  competitor.py  optimization.py  report.py  scraped_data.py
pipelines/: audit.py  campaign_setup.py  categories.py  category_restructure.py  cennik.py  competitor.py  competitor_analysis.py  competitor_dimensional_scores.py  competitor_report.py  competitor_report_refresh.py  competitor_selection.py  competitor_synthesis.py  enrich_emails.py  free_report.py  helpers.py  keywords.py  optimization.py  optimize_phases.py  outreach_loader.py  proofread.py  report.py  summary.py  versum_suggest.py
prompts/: README.md  audit_summary_applied.txt  audit_summary_pending.txt  competitor_market.txt  competitor_strategy.txt  competitor_swot.txt  competitor_synthesis.txt  descriptions_agent.txt  descriptions_score.txt  naming_agent.txt  naming_score.txt  optimization_categories.txt  optimization_content.txt  optimization_seo.txt  optimization_services.txt  optimization_verify.txt  structure.txt  summary.txt
scheduler/: __init__.py  refresh_scheduler.py
scripts/: ab_pricing_compare.py  backfill_dimensional_pool.py  backfill_is_package.py  backfill_salon_focus.py  backfill_structured_audit34.py  backfill_variant_brand_marker.py  check_existing_competitor_reports.py  classify_services_backfill.py  cluster_treatment_variants.py  dedupe_treatment_methods.py  dictionary_full_audit.py  embed_chain_heads_priority.py  embed_services.py  embed_taxonomy.py  ingest_salon_jsons.py  inspect_competitor_report.py  list_audit_candidates.py  loadtest_report_concurrency.py  reclassify_unclassified.py  reembed_methods_no_aliases.py  retrofit_method_aliases.py  retry_discovery.py  run_competitor_report_local.py  run_with_env.sh  seed_outreach_demo.py  seed_treatment_methods.py  similarity_pricing_preview.py  targeted_reclassify_orphans.py  taxonomy_inference_demo.py  test_hidden_service_inference.py  (+4 more)
(+150 files in other folders)
