[project]
name = "bagent"
version = "0.1.0"
description = "Beauty Audit AI Analyzer — Python FastAPI service for AI analysis pipelines"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "anthropic>=0.52.0",
    "supabase>=2.15.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=3.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external APIs (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 120
target-version = "py312"
